--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,24 @@
-PyMuPDF
-nltk
-wordcloud
-matplotlib
+PyMuPDF~=1.24.9
+nltk~=3.8.1
+wordcloud~=1.9.3
+matplotlib~=3.9.1
+
+numpy~=1.26.4
+typing_extensions~=4.12.2
+pillow~=10.4.0
+pip~=23.2.1
+regex~=2024.5.15
+click~=8.1.7
+tqdm~=4.66.4
+pyparsing~=3.1.2
+colorama~=0.4.6
+pytz~=2024.1
+joblib~=1.4.2
+six~=1.16.0
+python-dateutil~=2.9.0.post0
+contourpy~=1.2.1
+fonttools~=4.53.1
+lxml~=5.2.2
+cycler~=0.12.1
+packaging~=24.1
+kiwisolver~=1.4.5
